--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <a href="#" class="footer__anchor">
           <figure class="footer__logo">
             <img
-              src="/MyPortfolio-master/Resources/Black Pink Bold Elegant Monogram Personal Brand Logo.png"
+              src="./Resources/Black Pink Bold Elegant Monogram Personal Brand Logo.png"
               class="footer__logo--img"
             />
           </figure>
