--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               </a>
               <a href="./Resources/Final CVA.pdf" download="CV" class="about-me__link">
                 <i class="fa-solid fa-file-pdf"></i>
-            </a>
+             </a>
             </div>
           </div>
           <figure class="about-me__img--container">
@@ -343,46 +343,47 @@
             <i class="fa-solid fa-arrow-up"></i>
           </span>
         </a>
-        <ul class="wrapper">
-          <li class="icon instagram">
-            <span class="tool-tip">instagram</span>
-            <span>
-              <a
-                href="https://www.instagram.com/saishen_pillay/"
+        <div class="icon-container">
+          <ul class="wrapper">
+            <li class="icon instagram">
+              <span class="tool-tip">instagram</span>
+              <span>
+                <a
+                  href="https://www.instagram.com/saishen_pillay/"
+                  class="about-me__link"
+                >
+                  <i class="fa-brands fa-instagram"></i> </a
+              ></span>
+            </li>
+            <li class="icon threads">
+              <span class="tool-tip">Threads</span>
+              <span><a
+                href="https://www.threads.net/@saishen_pillay"
                 class="about-me__link"
               >
-                <i class="fa-brands fa-instagram"></i> </a
-            ></span>
-          </li>
-          <li class="icon threads">
-            <span class="tool-tip">Threads</span>
-            <span><a
-              href="https://www.threads.net/@saishen_pillay"
-              class="about-me__link"
-            >
-              <i class="fa-brands fa-threads"></i>
-            </a></span>
-          </li>
-
-          <li class="icon github">
-            <span class="tool-tip">Github</span>
-            <span><a href="https://github.com/SaishenP" class="about-me__link">
-              <i class="fa-brands fa-github"></i>
-            </a></span>
-          </li>
-          <li class="icon mail">
-            <span class="tool-tip">Mail</span>
-            <span><a href="mailto:SaishenPillayofficial@gmail.com"class="about-me__link">
-              <i class="fa-regular fa-envelope"></i>
-            </a></span>
-          </li>
-          <li class="icon file">
-            <span class="tool-tip">Resume</span>
-            <span><a href="./Resources/Final CVA.pdf" download="CV" class="about-me__link">
-                    <i class="fa-solid fa-file-pdf"></i>
-                </a></span>
-        </li>
-        </ul>
+                <i class="fa-brands fa-threads"></i>
+              </a></span>
+            </li>
+            <li class="icon github">
+              <span class="tool-tip">Github</span>
+              <span><a href="https://github.com/SaishenP" class="about-me__link">
+                <i class="fa-brands fa-github"></i>
+              </a></span>
+            </li>
+            <li class="icon mail">
+              <span class="tool-tip">Mail</span>
+              <span><a href="mailto:SaishenPillayofficial@gmail.com"class="about-me__link">
+                <i class="fa-regular fa-envelope"></i>
+              </a></span>
+            </li>
+            <li class="icon file">
+              <span class="tool-tip">Resume</span>
+              <span><a href="./Resources/Final CVA.pdf" download="CV" class="about-me__link">
+                      <i class="fa-solid fa-file-pdf"></i>
+                  </a></span>
+            </li>
+          </ul>
+      </div>
         <div class="footer__copyright">Copyright 2023</div>
       </div>
     </footer>
